# CoreShift

./: .gitignore  Cargo.toml  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: build-coreshift-debug.yml  build-coreshift-release.yml  build-release.yml  build.yml
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/native/arm64-v8a/: coreshift_demote  coreshift_discovery  coreshift_exec  coreshift_policy_cli
app/src/main/assets/native/armeabi-v7a/: axerish  coreshift_demote  coreshift_discovery  coreshift_exec  coreshift_policy_cli
app/src/main/java/core/coreshift/policy/: AxerishEnv.kt  BinaryInstaller.kt  BinaryRuntime.kt  CoreShiftAccessibility.kt  CoreShiftApp.kt  DiscoveryController.kt  EligibilityFilter.kt  Exec.kt  ExecutionController.kt  FloatingPrivilegeService.kt  MainActivity.kt  NativeExecutor.kt  Policy.kt  (+13 more)
app/src/main/res/drawable/: ic_coreshift.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: accessibility_config.xml
policy-engine/: build.gradle.kts
src/: lib.rs  low_level.rs  runtime.rs
src/core/: io.rs  lifecycle.rs  mod.rs  policy.rs  process.rs  result.rs
src/high_level/: android.rs  api.rs  mod.rs
src/low_level/io/: buffer.rs  drain.rs  mod.rs  writer.rs
src/low_level/reactor/: mod.rs
src/low_level/spawn/: mod.rs
src/low_level/sys/: mod.rs
src/main/kotlin/core/coreshift/policy/: Main.kt
src/mid_level/: ipc.rs  mod.rs  router.rs
