[package]
name = "CoreShift"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["blake3/std"]
pure = ["blake3/pure"]

[dependencies]
blake3 = { version = "1.8", default-features = false }
arrayvec = "0.7"
bytemuck = { version = "1.2", default-features = false }
lazy_static = { version = "1.5", default-features = false }
libc = { version = "0.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

